--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.4",
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "mongoose": "^8.7.1",
