--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^4.1.1",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
